Fix gallery on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ html,
 body,
 body > div:first-child,
 div#__next,
-div#__next > div {
+div#__next > div:first-child {
     height: 100%;
 }
 
@@ -22,7 +22,7 @@ div#__next > div {
     body,
     body > div:first-child,
     div#__next,
-    div#__next > div {
+    div#__next > div:first-child {
         height: auto !important;
     }
 }
